--- a/Crowd_Funding_Platform/Views/ManageCampaigns/SaveCampaigns.cshtml
+++ b/Crowd_Funding_Platform/Views/ManageCampaigns/SaveCampaigns.cshtml
@@ -77,7 +77,7 @@
 </div>
 
 @section Scripts {
-<script src="/js/savecampaignform.js"></script>
+<script src="~/js/SaveCampaignForm.js"></script>
 
  
 
